[package]
name = "xconn"
version = "0.1.0"
edition = "2024"

[dependencies]
wampproto = { git = "ssh://git@github.com/genki-robotics/wampproto-rust.git", rev = "cb5c65a8b8098be7103a9d25d5491074d27ad346" }

# sync websocket
tungstenite = {  version = "0.27.0", features = ["native-tls"] }
nix = { version = "0.30.1", features = ["poll"] }
http = "1.3.1"

# async websocket
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
async-trait = "0.1.88"
url = "2.5.4"
