[package]
name = "xconn"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["async"]   # Default to sync unless otherwise requested
sync = ["mio"]
async = ["tokio", "tokio-tungstenite", "futures-util", "async-trait"]

[dependencies]
# base dependencies
wampproto = { git = "ssh://git@github.com/xconnio/wampproto-rust.git", rev = "9aba2d40844af96c04422b77e3ecd7724ca896b8" }
tungstenite = {  version = "0.27.0", features = ["native-tls"] }
url = { version = "2.5.4" }

# sync websocket
mio = { version = "1.0.4", optional = true }

# async websocket
tokio = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"], optional = true }
futures-util = { version = "0.3.31", optional = true }
async-trait = { version = "0.1.88", optional = true }

[[example]]
name = "sync_example"
path = "examples/sync/main.rs"
required-features = ["sync"]

[[example]]
name = "async_example"
path = "examples/async/main.rs"
required-features = ["async"]
